# geans

./: .gitignore  README.md  biopython.yml  btwn_stats_dev.ipynb  data_explore.ipynb  get_covariates_gamb.sh  go_terms.ipynb  go_terms_regression.ipynb  go_terms_regression_test.ipynb  pyproject.toml  run_genescan.batch  run_genescan.sh  test.vcf.gz.gzi  test_mk.sh  test_stats.sh  testing.ipynb
example_data/: test.gff  test.vcf.gz.tbi  test_metadata.txt
geans/: __init__.py  __main__.py  gene_stats.py  sequence_utils.py  stat_utils.py
scripts/: climate_data.R  codontable.json  gene_stats.py  get_codinggenes.py  get_covariates.py  go_terms_stats.py  merge_OGs.R  mk_test.py  parse_gff.py  process_agmetadata.py  process_metadata.py  space_scan.py  wgs_stats.py
tests/: conftest.py  test_gene.py
utilityscripts/: get_codinggenes.py  parse_gff.py
