[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "geans"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "biopython",
    "scikit-allel",
    "scikit-learn",
    "gffutils",
]

[project.scripts]
geans = "geans.__main__:main"
